Some uncommitted changes

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ Build
 Mockup
 Release
 Release.zip
+Source/comfy_ui/replacers/mod_assets/games/hangman/s1.png
+Source/comfy_ui/replacers/mod_assets/games/hangman/s2.png
 Source/gui/Unused
 Temporary.svg
 Unused
